--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
             </ul>
 
             <p class="copyright">
-                مریم حقیقی کلیه‌ی حقوق نزد وب پروگ محفوظ است و هر گونه
+                کلیه‌ی حقوق نزد مریم حقیقی  محفوظ است و هر گونه
                 کپی‌برداری از مطالب، پیگرد قانونی دارد.
             </p>
         </footer>
@@ -475,3 +475,4 @@
         <script src="./js/app.js"></script>
     </body>
 </html>
+
